# python_developer_roadmap

./: .gitignore  .~lock.progress.ods#  README.md  decorators.ipynb  lambdas.ipynb  main.py  misc.ipynb  progress.ods  pyproject.toml  regex.ipynb  tests_to_run.txt  uncategorised.ipynb
build_in_modules/: enum.ipynb  functools.ipynb
data_structures_and_algorithms/: arrays_and_linked_lists.ipynb  binary_search_tree.ipynb  decorators.ipynb  dynamic_programming.ipynb  sorting.ipynb
design_patterns/: behavioral_patterns.ipynb  creational_patterns.ipynb  structural_patterns.ipynb
learn_the_basics/: built_in_functions.ipynb  conditionals.ipynb  exceptions.ipynb  loops.ipynb  var_types.ipynb  variables.ipynb
object_oriented_programming/: bro_code_course.ipynb  class_decorators.ipynb  dunder.ipynb  inheritance.ipynb  oop_tutorial.ipynb
object_oriented_programming/design_patterns/: behavioral_patterns.ipynb  creational_patterns.ipynb  structural_patterns.ipynb
testing/official_docs/: test_assert1.py  test_class.py
testing/tech_with_tim/: api.py  db.py  main.py  service.py  test_api.py  test_db.py  test_main.py  test_service.py
